overrides: initialize everything correctly